Updating the hint section to include genre, mood and occasion.

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
   <div class="container">
 
     <h1>MusicDo.ai</h1>
-    <h2>Discover a new world of Music ✨🎶🎸</h2>
+    <h2>Discover a new world of Music ✨🎶✨</h2>
 
     <main>
       <div class="form-container">
         <form id="playlist-generator-form">
           <input type="text" id="user-instructions" placeholder="Enter the name of your favourite artist..."
-            autofocus="required" autocomplete="off">
+            autofocus="required" autocomplete="off" class="user-instructions">
           <input type="submit" value="Generate Playlist" class="submit-button">
         </form>
-        <div class="hint"> Enter the name of your favourite artist and we'll generate a playlist of similar artists for
-          you. 🎶
+        <div class="hint"> *Enter the name of your favourite artist, occasion, mood or genre and we'll generate a
+          customised playlist for you. 🎶
         </div>
       </div>
       <div class="playlist-response" id="playlist-response">
-        Your Playlist will be generated here. ✨🎶🎸
+        Your Playlist will be generated here.✨ ✨
         <div id="playlist"></div>
       </div>
     </main>
@@ -38,8 +38,8 @@
       <p class="footer">
         This AI project was coded by
         <a href="https://github.com/Reya0707" target="_blank">Reya 🤘</a> and is open-sourced
-        <a href="https://github.com/Reya0707/AI-Poem-Generator" target="_blank">on GitHub</a> and
-        <a href="https://reyaipoemgenerator.netlify.app/" target="_blank">hosted on Netlify</a>
+        <a href="https://github.com/Reya0707/Music-Playlist-AI" target="_blank">on GitHub</a> and
+        <a href="https://musicdoai.netlify.app" target="_blank">hosted on Netlify</a>
       </p>
     </footer>
 
